new b9ps features

--- a/GameData/NearFutureConstruction/Localization/en-us.cfg
+++ b/GameData/NearFutureConstruction/Localization/en-us.cfg
@@ -25,9 +25,35 @@ Localization
     #LOC_NFConstruction_switcher_subtype_variant_fuel_Ore = Ore
     #LOC_NFConstruction_switcher_subtype_variant_fuel_Service = Support
 
+    #LOC_NFConstruction_switcher_subtype_variant_LFO_detail = Integrated tanks with Liquid Fuel and Oxidizer storage
+    #LOC_NFConstruction_switcher_subtype_variant_LFO_summary = Liquid Fuel/Oxidizer Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_LF_detail = Integrated tanks with Liquid Fuel storage
+    #LOC_NFConstruction_switcher_subtype_variant_LF_summary = Liquid Fuel Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_O_detail = Integrated tanks with Oxidizer storage
+    #LOC_NFConstruction_switcher_subtype_variant_O_summary = Oxidizer Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_LH2_detail = Integrated tanks with Liquid Hydrogen storage
+    #LOC_NFConstruction_switcher_subtype_variant_LH2_summary = Liquid Hydrogen Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail = Integrated tanks with Liquid Hydrogen and Oxidizer storage
+    #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary = Liquid Hydrogen/Oxidizer Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_Xe_detail = Integrated tanks with Xenon storage
+    #LOC_NFConstruction_switcher_subtype_variant_Xe_summary = Xenon Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_Ar_detail = Integrated tanks with Argon storage
+    #LOC_NFConstruction_switcher_subtype_variant_Ar_summary = Argon Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_Li_detail = Integrated tanks with Lithium storage
+    #LOC_NFConstruction_switcher_subtype_variant_Li_summary = Lithium Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_Ore_detail = Integrated tanks with Ore storage
+    #LOC_NFConstruction_switcher_subtype_variant_Ore_summary = Ore Tanks
+    #LOC_NFConstruction_switcher_subtype_variant_Service_detail = Integrated electricity and Monopropellant storage
+    #LOC_NFConstruction_switcher_subtype_variant_Service_summary = Mission Support Equipment
+
     #LOC_NFConstruction_switcher_core_title = Core
     #LOC_NFConstruction_switcher_core_variant1 = None
     #LOC_NFConstruction_switcher_core_variant2 = Solid
+    #LOC_NFConstruction_switcher_core_none_summary = No core segment
+    #LOC_NFConstruction_switcher_core_none_detail = Truss has no centre core
+    #LOC_NFConstruction_switcher_core_solid_summary = Core segment
+    #LOC_NFConstruction_switcher_core_solid_detail = Truss has a solid centre core
+
 
     #LOC_NFConstruction_switcher_truss_title = Truss
     #LOC_NFConstruction_switcher_truss_variant1 = Solid
@@ -35,11 +61,29 @@ Localization
     #LOC_NFConstruction_switcher_truss_variant3 = Saddle
     #LOC_NFConstruction_switcher_truss_variant4 = Dual
     #LOC_NFConstruction_switcher_truss_variant5 = Frame
+    #LOC_NFConstruction_switcher_truss_solid_detail = A solid truss with no internal mounting capabilities
+    #LOC_NFConstruction_switcher_truss_solid_summary = Robust solid truss
+    #LOC_NFConstruction_switcher_truss_hollow_detail =A truss with empty internal space for mounting
+    #LOC_NFConstruction_switcher_truss_hollow_summary =  Open empty truss
+    #LOC_NFConstruction_switcher_truss_saddle_detail = A truss with empty internal space, open on one side
+    #LOC_NFConstruction_switcher_truss_saddle_summary = Saddle style truss
+    #LOC_NFConstruction_switcher_truss_open_detail = A truss with empty internal space, open on all sides
+    #LOC_NFConstruction_switcher_truss_open_summary = Open truss
+    #LOC_NFConstruction_switcher_truss_dual_detail = A truss with empty internal space, open on two sides
+    #LOC_NFConstruction_switcher_truss_dual_summary =  Dual truss
+    #LOC_NFConstruction_switcher_truss_frame_detail = A minimal truss with empty internal space, open on all sides
+    #LOC_NFConstruction_switcher_truss_frame_summary =  Truss frame
 
     #LOC_NFConstruction_switcher_profile_title = Profile
     #LOC_NFConstruction_switcher_profile_square = Square
     #LOC_NFConstruction_switcher_profile_triangular = Triangular
     #LOC_NFConstruction_switcher_profile_planar = Planar
+    #LOC_NFConstruction_switcher_profile_planar_detail = A simple flat truss profile
+    #LOC_NFConstruction_switcher_profile_planar_summary = Flat Cross Section
+    #LOC_NFConstruction_switcher_profile_triangular_detail = A triangular truss profile
+    #LOC_NFConstruction_switcher_profile_triangular_summary = Triangular Cross Section
+    #LOC_NFConstruction_switcher_profile_square_detail = A square truss profile
+    #LOC_NFConstruction_switcher_profile_square_summary = Square Cross Section
 
     #LOC_NFConstruction_switcher_endcap_title1 = Upper Cap
     #LOC_NFConstruction_switcher_endcap_title2 = Lower Cap
@@ -47,20 +91,46 @@ Localization
     #LOC_NFConstruction_switcher_endcap_variant2 = Solid
     #LOC_NFConstruction_switcher_endcap_variant3 = None
 
+    #LOC_NFConstruction_switcher_endcap_basic_detail = A basic endcap
+    #LOC_NFConstruction_switcher_endcap_basic_summary = Standard Cap
+    #LOC_NFConstruction_switcher_endcap_solid_detail = A robust and solid endcap
+    #LOC_NFConstruction_switcher_endcap_solid_summary = Solid Cap
+    #LOC_NFConstruction_switcher_endcap_none_detail = No truss cap
+    #LOC_NFConstruction_switcher_endcap_none_summary = No Cap
+
+
     #LOC_NFConstruction_switcher_angle_title = Angle
     #LOC_NFConstruction_switcher_angle_variant1 = 90 Degrees
     #LOC_NFConstruction_switcher_angle_variant2 = 45 Degrees
     #LOC_NFConstruction_switcher_angle_variant3 = 30 Degrees
+    #LOC_NFConstruction_switcher_angle_90_detail = Angled connector for 90 degree junctions
+    #LOC_NFConstruction_switcher_angle_90_summary =
+    #LOC_NFConstruction_switcher_angle_45_detail = Angled connector for 45 degree junctions
+    #LOC_NFConstruction_switcher_angle_45_summary =
+    #LOC_NFConstruction_switcher_angle_30_detail = Angled connector for 30 degree junctions
+    #LOC_NFConstruction_switcher_angle_30_summary =
 
     #LOC_NFConstruction_switcher_attach_title = Subtype
     #LOC_NFConstruction_switcher_attach_variant1 = Angled
     #LOC_NFConstruction_switcher_attach_variant2 = Angled Hollow
     #LOC_NFConstruction_switcher_attach_variant3 = Ortho
     #LOC_NFConstruction_switcher_attach_variant4 = Ortho Hollow
+    #LOC_NFConstruction_switcher_attach_angled_detail = This connector is configured to attach to the angled sides of an octo-truss
+    #LOC_NFConstruction_switcher_attach_angled_summary = Angled Connector
+    #LOC_NFConstruction_switcher_attach_angled_hollow_detail = This connector is configured to attach to the angled sides of an octo-truss and lacks a core element
+    #LOC_NFConstruction_switcher_attach_angled_hollow_summary = Angled Connector (Hollow)
+    #LOC_NFConstruction_switcher_attach_ortho_detail = This connector is configured to attach to the cardinal nodes of an octo-truss
+    #LOC_NFConstruction_switcher_attach_ortho_summary = Orthographic Connector
+    #LOC_NFConstruction_switcher_attach_ortho_hollow_detail = This connector is configured to attach to the cardinal nodes of an octo-truss and lacks a core element
+    #LOC_NFConstruction_switcher_attach_ortho_hollow_summary = Orthographic Connector (Hollow)
 
     #LOC_NFConstruction_switcher_docking_title = Core
     #LOC_NFConstruction_switcher_docking_variant1 = Hollow
     #LOC_NFConstruction_switcher_docking_variant2 = Hatch
+    #LOC_NFConstruction_switcher_docking_hatch_detail = Port has a crew hatch in the centre
+    #LOC_NFConstruction_switcher_docking_hatch_summary = Crew Hatch
+    #LOC_NFConstruction_switcher_docking_hollow_detail = Port has an empty hole in the centre
+    #LOC_NFConstruction_switcher_docking_hollow_summary = Basic
 
     #LOC_NFConstruction_switcher_multiadapter_title = Nodes
     #LOC_NFConstruction_switcher_multiadapter_variant1 = Two
@@ -68,11 +138,29 @@ Localization
     #LOC_NFConstruction_switcher_multiadapter_variant3 = Six
     #LOC_NFConstruction_switcher_multiadapter_variant4 = Eight
 
+    #LOC_NFConstruction_switcher_multiadapter_8_detail =
+    #LOC_NFConstruction_switcher_multiadapter_8_summary = Eight 0.625m nodes
+    #LOC_NFConstruction_switcher_multiadapter_6_detail =
+    #LOC_NFConstruction_switcher_multiadapter_6_summary = Six 0.625m nodes
+    #LOC_NFConstruction_switcher_multiadapter_4_detail =
+    #LOC_NFConstruction_switcher_multiadapter_4_summary = Four 0.625m nodes
+    #LOC_NFConstruction_switcher_multiadapter_2_detail =
+    #LOC_NFConstruction_switcher_multiadapter_2_summary = Two 0.625m nodes
+
     #LOC_NFConstruction_switcher_endcaps_name = Endcap
     #LOC_NFConstruction_switcher_endcaps_black = Classic (Bare)
     #LOC_NFConstruction_switcher_endcaps_black_handles = Classic
     #LOC_NFConstruction_switcher_endcaps_white = Insulated (Bare)
     #LOC_NFConstruction_switcher_endcaps_white_handles = Insulated
+
+    #LOC_NFConstruction_switcher_endcaps_black_detail =
+    #LOC_NFConstruction_switcher_endcaps_black_summary =
+    #LOC_NFConstruction_switcher_endcaps_black_handles_detail =
+    #LOC_NFConstruction_switcher_endcaps_black_handles_summary =
+    #LOC_NFConstruction_switcher_endcaps_white_detail =
+    #LOC_NFConstruction_switcher_endcaps_white_summary =
+    #LOC_NFConstruction_switcher_endcaps_white_handles_detail =
+    #LOC_NFConstruction_switcher_endcaps_white_handles_summary =
 
     // PARTS
     // Hex Girder
