--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-03.cfg
@@ -57,6 +57,8 @@ PART
 		{
 			name = None
 			title = #LOC_NFConstruction_switcher_core_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
 		}
 		SUBTYPE
 		{
@@ -66,6 +68,8 @@ PART
 			transform = COLLIDER_CTRSML
 			addedMass = 0.125
 			addedCost = 180
+      descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
 		}
 	}
 	MODULE
@@ -88,6 +92,8 @@ PART
 			transform = COLLIDER_OUTERSMLA03
 			transform = COLLIDER_OUTERSMLA04
 			transform = COLLIDER_OUTERSMLA05
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 
 		}
 		SUBTYPE
@@ -102,6 +108,8 @@ PART
 			transform = COLLIDER_OUTERSMLB05
 			addedMass = -0.1
 			addedCost = -270
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
 		}
 		SUBTYPE
 		{
@@ -110,6 +118,8 @@ PART
 			transform = TRUSSSMLHOLLOW
 			addedMass = -0.2
 			addedCost = -540
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 	}
 	MODULE
@@ -121,6 +131,8 @@ PART
 		{
 			name = Basic
 			title = #LOC_NFConstruction_switcher_endcap_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -131,6 +143,8 @@ PART
 			transform = COLLIDER_TOPSML
 			addedMass = 0.05
 			addedCost = 100
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 	}
 	MODULE
@@ -142,6 +156,8 @@ PART
 		{
 			name = Basic
 			title = #LOC_NFConstruction_switcher_endcap_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -152,6 +168,8 @@ PART
 			transform = COLLIDER_BOTTOMSML
 			addedMass = 0.05
 			addedCost = 100
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 	}
 }
