--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-04.cfg
@@ -57,6 +57,8 @@ PART
 		{
 			name = None
 			title = #LOC_NFConstruction_switcher_core_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
 		}
 		SUBTYPE
 		{
@@ -66,6 +68,8 @@ PART
 			transform = COLLIDER_CTRMINI
 			addedMass = 0.0625
 			addedCost = 90
+      descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
 		}
 	}
 	MODULE
@@ -88,6 +92,8 @@ PART
 			transform = COLLIDER_OUTERMINIA03
 			transform = COLLIDER_OUTERMINIA04
 			transform = COLLIDER_OUTERMINIA05
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 		SUBTYPE
 		{
@@ -101,6 +107,8 @@ PART
 			transform = COLLIDER_OUTERMINIB05
 			addedMass = -0.05
 			addedCost = -135
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
 		}
 		SUBTYPE
 		{
@@ -120,6 +128,8 @@ PART
 		{
 			name = Basic
 			title = #LOC_NFConstruction_switcher_endcap_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -130,6 +140,8 @@ PART
 			transform = COLLIDER_TOPMINI
 			addedMass = 0.05
 			addedCost = 100
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 	}
 	MODULE
@@ -141,6 +153,8 @@ PART
 		{
 			name = Basic
 			title = #LOC_NFConstruction_switcher_endcap_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -151,6 +165,8 @@ PART
 			transform = COLLIDER_BOTTOMMINI
 			addedMass = 0.05
 			addedCost = 100
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 	}
 }
