--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-01.cfg
@@ -57,7 +57,7 @@ PART
 		transform = HexLiTankLrg
 		transform = HexLH2OTankLrgFoil
 	}
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -70,6 +70,8 @@ PART
 			title = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = LargeTruss
 			transform = COLLIDERLRG
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 
 		SUBTYPE
@@ -87,6 +89,8 @@ PART
 			crashTolerance = 60
 			addedMass = -0.04
 			addedCost = -100
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 		SUBTYPE
 		{
@@ -98,6 +102,8 @@ PART
 			transform = COLLIDERLRG
 			addedCost = 2696
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LFO_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LFO_detail
 		}
 		SUBTYPE
 		{
@@ -109,6 +115,8 @@ PART
 			transform = COLLIDERLRG
 			addedCost = 2696
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LF_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LF_detail
 
 		}
 		SUBTYPE
@@ -120,6 +128,8 @@ PART
 			transform = LargeTruss
 			transform = COLLIDERLRG
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_O_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_O_detail
 		}
 		SUBTYPE
 		{
@@ -130,6 +140,8 @@ PART
 			transform = LargeTruss
 			transform = COLLIDERLRG
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Service_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Service_detail
 		}
 		SUBTYPE
 		{
@@ -140,6 +152,8 @@ PART
 			transform = LargeTruss
 			transform = COLLIDERLRG
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Xe_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Xe_detail
 		}
 		SUBTYPE
 		{
@@ -150,6 +164,8 @@ PART
 			transform = LargeTruss
 			transform = COLLIDERLRG
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ore_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ore_detail
 		}
 	}
 }
