--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-02.cfg
@@ -57,7 +57,7 @@ PART
 		transform = HexLiTankMed
 		transform = HexLH2OTankMedFoil
 	}
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -98,6 +98,8 @@ PART
 			transform = COLLIDERMED
 			addedCost = 2696
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LFO_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LFO_detail
 		}
 		SUBTYPE
 		{
@@ -109,6 +111,8 @@ PART
 			transform = COLLIDERMED
 			addedCost = 2696
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LF_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LF_detail
 
 		}
 		SUBTYPE
@@ -120,6 +124,8 @@ PART
 			transform = MediumTruss
 			transform = COLLIDERMED
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_O_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_O_detail
 		}
 		SUBTYPE
 		{
@@ -130,6 +136,8 @@ PART
 			transform = MediumTruss
 			transform = COLLIDERMED
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Service_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Service_detail
 		}
 		SUBTYPE
 		{
@@ -140,6 +148,8 @@ PART
 			transform = MediumTruss
 			transform = COLLIDERMED
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Xe_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Xe_detail
 		}
 		SUBTYPE
 		{
@@ -150,6 +160,8 @@ PART
 			transform = MediumTruss
 			transform = COLLIDERMED
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ore_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ore_detail
 		}
 
 	}
