--- a/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-hex/truss-hex-03.cfg
@@ -60,6 +60,8 @@ PART
 			title = #LOC_NFConstruction_switcher_subtype_variant1
 			transform = SmallTruss
 			transform = COLLIDERSML
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 
 		SUBTYPE
@@ -77,6 +79,8 @@ PART
 			crashTolerance = 60
 			addedMass = -0.01
 			addedCost = -50
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 
 
