--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-1.cfg
@@ -57,6 +57,8 @@ PART
 			name = Cubic
 			title = #LOC_NFConstruction_switcher_profile_square
 			transform = TrussSquareLong
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_square_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_square_detail
 		}
 
 		SUBTYPE
@@ -64,7 +66,8 @@ PART
 			name = Triangular
 			title = #LOC_NFConstruction_switcher_profile_triangular
 			transform = TrussTriLong
-
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_triangular_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_triangular_detail
 			addedMass = -0.001
 			addedCost = -32
 		}
@@ -73,7 +76,8 @@ PART
 			name = Planar
 			title = #LOC_NFConstruction_switcher_profile_planar
 			transform = TrussPlaneLong
-
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_planar_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_planar_detail
 			addedMass = -0.002
 			addedCost = -48
 		}
