--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-adapter-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-adapter-1.cfg
@@ -53,6 +53,8 @@ PART
 			name = Cubic
 			title = #LOC_NFConstruction_switcher_profile_square
 			transform = AdaptSquare
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_square_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_square_detail
 		}
 
 		SUBTYPE
@@ -62,6 +64,8 @@ PART
 			transform = AdaptTri
 			addedMass = -0.001
 			addedCost = -32
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_triangular_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_triangular_detail
 		}
 
 
