--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-02.cfg
@@ -70,6 +70,8 @@ PART
 			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoMedium
 			transform = COLLISION14
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 
 		SUBTYPE
@@ -89,6 +91,8 @@ PART
 			crashTolerance = 60
 			addedMass = -0.025
 			addedCost = -40
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 		SUBTYPE
 		{
@@ -106,6 +110,8 @@ PART
 			crashTolerance = 50
 			addedMass = -0.035
 			addedCost = -60
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
 		}
 		SUBTYPE
 		{
@@ -122,6 +128,8 @@ PART
 			crashTolerance = 40
 			addedMass = -0.045
 			addedCost = -80
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
 		}
 		SUBTYPE
 		{
@@ -133,6 +141,8 @@ PART
 			transform = LFOTankMed
 			addedCost = 1348
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LFO_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LFO_detail
 		}
 		SUBTYPE
 		{
@@ -144,6 +154,8 @@ PART
 			transform = LFTankMed
 			addedCost = 1348
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LF_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LF_detail
 		}
 		SUBTYPE
 		{
@@ -155,6 +167,8 @@ PART
 			transform = OXTankMed
 			addedCost = 1348
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_O_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_O_detail
 		}
 		SUBTYPE
 		{
@@ -165,6 +179,8 @@ PART
 			transform = COLLISION14
 			transform = MPTankMed
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Service_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Service_detail
 
 		}
 		SUBTYPE
@@ -176,6 +192,8 @@ PART
 			transform = COLLISION14
 			transform = XeTankMed
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Xe_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Xe_detail
 		}
 		SUBTYPE
 		{
@@ -186,6 +204,8 @@ PART
 			transform = COLLISION14
 			transform = OreTankMed
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ore_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ore_detail
 		}
 	}
 }
