--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-03.cfg
@@ -59,6 +59,8 @@ PART
 			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoSmall
 			transform = COLLISION13
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 
 		SUBTYPE
@@ -78,6 +80,8 @@ PART
 			addedMass = -0.0125
 			addedCost = -20
 			crashTolerance = 60
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 		SUBTYPE
 		{
@@ -95,6 +99,8 @@ PART
 			addedMass = -0.0175
 			crashTolerance = 50
 			addedCost = -30
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
 		}
 		SUBTYPE
 		{
@@ -111,6 +117,8 @@ PART
 			addedMass = -0.025
 			crashTolerance = 40
 			addedCost = -40
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
 		}
 	}
 
