--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-04.cfg
@@ -59,6 +59,8 @@ PART
 			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoEighth
 			transform = COLLISIONNANO
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 
 		SUBTYPE
@@ -78,6 +80,8 @@ PART
 			addedMass = -0.00625
 			crashTolerance = 60
 			addedCost = -10
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 
 	}
