--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-01.cfg
@@ -58,6 +58,8 @@ PART
 			node = top01
 			transform = Truss90A
 			transform = Truss90B
+      descriptionSummary = #LOC_NFConstruction_switcher_angle_90_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_angle_90_detail
 		}
 
 		SUBTYPE
@@ -70,6 +72,8 @@ PART
 			transform = COLLISION45D
 			addedCost = -250
 			addedMass = -0.125
+      descriptionSummary = #LOC_NFConstruction_switcher_angle_45_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_angle_45_detail
 		}
 		SUBTYPE
 		{
@@ -81,6 +85,8 @@ PART
 			transform = COLLISION30D
 			addedCost = -350
 			addedMass = -0.17
+      descriptionSummary = #LOC_NFConstruction_switcher_angle_30_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_angle_30_detail
 		}
 	}
 }
