--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-angled-crew-01.cfg
@@ -93,6 +93,8 @@ PART
 			title = #LOC_NFConstruction_switcher_angle_variant1
 			node = top01
 			transform = Angled90
+      descriptionSummary = #LOC_NFConstruction_switcher_angle_90_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_angle_90_detail
 		}
 
 		SUBTYPE
@@ -103,6 +105,8 @@ PART
 			transform = Angled45
 			addedCost = -250
 			addedMass = -0.125
+      descriptionSummary = #LOC_NFConstruction_switcher_angle_45_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_angle_45_detail
 		}
 		SUBTYPE
 		{
@@ -112,6 +116,8 @@ PART
 			transform = Angled30
 			addedCost = -350
 			addedMass = -0.17
+      descriptionSummary = #LOC_NFConstruction_switcher_angle_30_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_angle_30_detail
 		}
 	}
 }
