--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-03.cfg
@@ -92,6 +92,8 @@ PART
 			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoSmall001
 			transform = COLLISION031
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 
 		SUBTYPE
@@ -110,6 +112,8 @@ PART
 			addedMass = -0.0125
 			addedCost = -20
 			crashTolerance = 60
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 		SUBTYPE
 		{
@@ -125,6 +129,8 @@ PART
 			addedCost = -40
 			addedMass = -0.025
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
 		}
 	}
 }
