--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
@@ -57,7 +57,8 @@ PART
 		{
 			name = None
 			title = #LOC_NFConstruction_switcher_core_variant1
-
+      descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
 		}
 		SUBTYPE
 		{
@@ -67,6 +68,8 @@ PART
 			transform = COLLIDERLRGCORE
 			addedMass = 0.2
 			addedCost = 200
+      descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
 		}
 	}
 	MODULE
@@ -83,7 +86,8 @@ PART
 			transform = COLLIDERLRG02
 			transform = COLLIDERLRG03
 			transform = COLLIDERLRG04
-
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 		SUBTYPE
 		{
@@ -96,6 +100,8 @@ PART
 
 			addedMass = -0.0875
 			addedCost = -112.5
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
 		}
 		SUBTYPE
 		{
@@ -106,6 +112,8 @@ PART
 			transform = COLLIDERLRG02
 			addedMass = -0.175
 			addedCost = -225
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
 		}
 		SUBTYPE
 		{
@@ -114,6 +122,8 @@ PART
 			transform = TRUSSLRGFRAME
 			addedMass = -0.35
 			addedCost = -450
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_frame_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_frame_detail
 		}
 	}
 	MODULE
@@ -132,6 +142,8 @@ title = #LOC_NFConstruction_switcher_endcap_variant1
 			transform = COLLIDERTOPA02
 			transform = COLLIDERTOPA03
 			transform = COLLIDERTOPA04
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -142,6 +154,8 @@ title = #LOC_NFConstruction_switcher_endcap_variant1
 			transform = COLLIDERTOPB
 			addedMass = 0.03
 			addedCost = 75
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 		SUBTYPE
 		{
@@ -150,6 +164,8 @@ title = #LOC_NFConstruction_switcher_endcap_variant1
 			transform = TRUSSTOPFRAME
 			addedMass = -0.01
 			addedCost = -25
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_none_detail
 		}
 	}
 	MODULE
@@ -168,6 +184,8 @@ title = #LOC_NFConstruction_switcher_endcap_variant1
 			transform = COLLIDERBOTA02
 			transform = COLLIDERBOTA03
 			transform = COLLIDERBOTA04
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -178,6 +196,8 @@ title = #LOC_NFConstruction_switcher_endcap_variant1
 			transform = COLLIDERBOTB
 			addedMass = 0.03
 			addedCost = 75
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 		SUBTYPE
 		{
@@ -186,6 +206,8 @@ title = #LOC_NFConstruction_switcher_endcap_variant1
 			transform = TRUSSBOTFRAME
 			addedMass = -0.01
 			addedCost = -25
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_none_detail
 		}
 	}
 }
