--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-adapter-02.cfg
@@ -52,6 +52,8 @@ PART
 		{
 			name = None
 			title = #LOC_NFConstruction_switcher_core_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
 		}
 		SUBTYPE
 		{
@@ -61,6 +63,8 @@ PART
 			transform = COLLIDERADAPT02CORE
 			addedMass = 0.05
 			addedCost = 75
+      descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
 		}
 	}
 
