--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -14,9 +14,11 @@
       transform = OctoLargeBare
       transform = COLLISION15
       transform = LH2OXTankLarge
-	  transform = LH2OXTankLargeFoil
+	     transform = LH2OXTankLargeFoil
       addedCost = 2696
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
     }
     %SUBTYPE[LH2Cryo]
     {
@@ -27,6 +29,8 @@
       transform = LH2TankLarge
       addedCost = 2696
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
     }
     %SUBTYPE[Lithium]
     {
@@ -36,6 +40,8 @@
       transform = COLLISION15
       transform = LithiumTankLarge
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
     }
     %SUBTYPE[Argon]
     {
@@ -45,6 +51,8 @@
       transform = COLLISION15
       transform = ArgonTankLarge
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
     }
   }
 }
@@ -82,6 +90,8 @@
       transform = LH2OXTankMed
       addedCost = 1348
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
     }
     %SUBTYPE[LH2Cryo]
     {
@@ -92,6 +102,8 @@
       transform = LH2TankMed
       addedCost = 1348
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
     }
     %SUBTYPE[Lithium]
     {
@@ -101,6 +113,8 @@
       transform = COLLISION14
       transform = LithiumTankMed
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
     }
     %SUBTYPE[Argon]
     {
@@ -110,6 +124,8 @@
       transform = COLLISION14
       transform = ArgonTankMed
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
     }
   }
 }
@@ -147,6 +163,8 @@
 			transform = COLLIDERLRG
       addedCost = 1348
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
     }
     %SUBTYPE[LH2Cryo]
     {
@@ -157,6 +175,8 @@
 			transform = COLLIDERLRG
       addedCost = 1348
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
     }
     %SUBTYPE[Lithium]
     {
@@ -166,6 +186,8 @@
 	     transform = LargeTruss
 	      transform = COLLIDERLRG
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
     }
     %SUBTYPE[Argon]
     {
@@ -175,6 +197,8 @@
 			transform = LargeTruss
 			transform = COLLIDERLRG
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
     }
   }
 }
@@ -214,6 +238,8 @@
 			transform = COLLIDERMED
       addedCost = 1348
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2O_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2O_detail
     }
     %SUBTYPE[LH2Cryo]
     {
@@ -224,6 +250,8 @@
 			transform = COLLIDERMED
       addedCost = 1348
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LH2_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LH2_detail
     }
     %SUBTYPE[Lithium]
     {
@@ -233,6 +261,9 @@
 			transform = MediumTruss
 			transform = COLLIDERMED
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Li_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Li_detail
+
     }
     %SUBTYPE[Argon]
     {
@@ -242,6 +273,8 @@
 			transform = MediumTruss
 			transform = COLLIDERMED
       crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ar_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ar_detail
     }
   }
 }
