--- a/GameData/NearFutureConstruction/Patches/NFConstructionStockPartReplacements.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionStockPartReplacements.cfg
@@ -28,6 +28,8 @@
 			name = Cubic
 			title = #LOC_NFConstruction_switcher_profile_square
 			transform = TrussSquareSmall
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_square_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_square_detail
 		}
 
 		SUBTYPE
@@ -37,6 +39,8 @@
 			transform = TrussTriSmall
 			addedMass = -0.00025
 			addedCost = -8
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_triangular_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_triangular_detail
 		}
 		SUBTYPE
 		{
@@ -46,6 +50,8 @@
 			crashTolerance = 60
 			addedMass = -0.0005
 			addedCost = -12
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_planar_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_planar_detail
 		}
 	}
 }
