--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-02.cfg
@@ -57,6 +57,8 @@ PART
 		{
 			name = None
 			title = #LOC_NFConstruction_switcher_core_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
 		}
 		SUBTYPE
 		{
@@ -66,6 +68,8 @@ PART
 			transform = COLLIDER_CTR
 			addedMass = 0.25
 			addedCost = 360
+      descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
 		}
 	}
 	MODULE
@@ -88,6 +92,8 @@ PART
 			transform = COLLIDER_OUTERA003
 			transform = COLLIDER_OUTERA004
 			transform = COLLIDER_OUTERA005
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 		SUBTYPE
 		{
@@ -101,6 +107,8 @@ PART
 			transform = COLLIDER_OUTERB005
 			addedMass = -0.2
 			addedCost = -540
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
 		}
 		SUBTYPE
 		{
@@ -109,6 +117,8 @@ PART
 			transform = TRUSSHOLLOW
 			addedMass = -0.4
 			addedCost = -1080
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 	}
 	MODULE
@@ -120,6 +130,8 @@ PART
 		{
 			name = Basic
 			title = #LOC_NFConstruction_switcher_endcap_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -130,6 +142,8 @@ PART
 			transform = COLLIDER_TOP
 			addedMass = 0.05
 			addedCost = 100
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 	}
 	MODULE
@@ -141,6 +155,8 @@ PART
 		{
 			name = Basic
 			title = #LOC_NFConstruction_switcher_endcap_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -151,6 +167,8 @@ PART
 			transform = COLLIDER_BOTTOM
 			addedMass = 0.05
 			addedCost = 100
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 	}
 }
