--- a/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-circular/truss-circular-adapter-01.cfg
@@ -56,6 +56,8 @@ PART
 			name = None
 			title = #LOC_NFConstruction_switcher_core_variant1
 			transform = AdapterCoreBit
+      descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
 		}
 		SUBTYPE
 		{
@@ -65,6 +67,8 @@ PART
 			transform = COLLIDER_ADAPTCORE
 			addedMass = 0.1
 			addedCost = 300
+      descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
 		}
 	}
 }
