--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-2.cfg
@@ -57,6 +57,8 @@ PART
 			name = Cubic
 			title = #LOC_NFConstruction_switcher_profile_square
 			transform = TrussSquareMed
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_square_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_square_detail
 		}
 
 		SUBTYPE
@@ -66,6 +68,8 @@ PART
 			transform = TrussTriMed
 			addedMass = -0.0005
 			addedCost = -16
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_triangular_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_triangular_detail
 		}
 		SUBTYPE
 		{
@@ -74,6 +78,9 @@ PART
 			transform = TrussPlaneMed
 			addedMass = -0.001
 			addedCost = -24
+      descriptionSummary = #LOC_NFConstruction_switcher_profile_planar_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_profile_planar_detail
+
 		}
 
 
