--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-01.cfg
@@ -70,6 +70,8 @@ PART
 			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoLarge
 			transform = COLLISION15
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 
 		SUBTYPE
@@ -89,6 +91,8 @@ PART
 			crashTolerance = 60
 			addedMass = -0.05
 			addedCost = -80
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 
 		}
 		SUBTYPE
@@ -107,6 +111,8 @@ PART
 			crashTolerance = 50
 			addedMass = -0.07
 			addedCost = -120
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
 		}
 		SUBTYPE
 		{
@@ -123,6 +129,8 @@ PART
 			crashTolerance = 40
 			addedMass = -0.09
 			addedCost = -160
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
 		}
 		SUBTYPE
 		{
@@ -134,6 +142,8 @@ PART
 			transform = LFOTankLarge
 			addedCost = 2696
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LFO_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LFO_detail
 		}
 		SUBTYPE
 		{
@@ -145,6 +155,8 @@ PART
 			transform = LFTankLarge
 			addedCost = 2696
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_LF_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_LF_detail
 
 		}
 		SUBTYPE
@@ -157,6 +169,8 @@ PART
 			transform = OXTankLarge
 			addedCost = 2696
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_O_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_O_detail
 		}
 		SUBTYPE
 		{
@@ -167,6 +181,8 @@ PART
 			transform = COLLISION15
 			transform = MPTankLarge
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Service_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Service_detail
 		}
 		SUBTYPE
 		{
@@ -177,6 +193,8 @@ PART
 			transform = COLLISION15
 			transform = XeTankLarge
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Xe_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Xe_detail
 		}
 		SUBTYPE
 		{
@@ -187,6 +205,8 @@ PART
 			transform = COLLISION15
 			transform = OreTankLarge
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_subtype_variant_Ore_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_subtype_variant_Ore_detail
 		}
 	}
 }
