--- a/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-octo/truss-octo-crew-01.cfg
@@ -93,6 +93,8 @@ PART
 			title= #LOC_NFConstruction_switcher_subtype_variant1
 			transform = OctoLarge001
 			transform = COLLISION15
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 
 		SUBTYPE
@@ -111,6 +113,8 @@ PART
 			addedMass = -0.05
 			addedCost = -80
 			crashTolerance = 60
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_hollow_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_hollow_detail
 		}
 		SUBTYPE
 		{
@@ -126,6 +130,8 @@ PART
 			addedMass = -0.09
 			addedCost = -160
 			crashTolerance = 50
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
 		}
 	}
 }
