--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-02.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-02.cfg
@@ -57,6 +57,8 @@ PART
 		{
 			name = None
 			title = #LOC_NFConstruction_switcher_core_variant1
+      descriptionSummary = #LOC_NFConstruction_switcher_core_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_none_detail
 		}
 		SUBTYPE
 		{
@@ -66,6 +68,8 @@ PART
 			transform = COLLIDERMEDCORE
 			addedMass = 0.1
 			addedCost = 100
+      descriptionSummary = #LOC_NFConstruction_switcher_core_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_core_solid_detail
 		}
 	}
 	MODULE
@@ -82,6 +86,8 @@ PART
 			transform = COLLIDERMED02
 			transform = COLLIDERMED03
 			transform = COLLIDERMED04
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_solid_detail
 		}
 		SUBTYPE
 		{
@@ -94,6 +100,8 @@ PART
 
 			addedMass = -0.04375
 			addedCost = -56.25
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_saddle_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_saddle_detail
 		}
 		SUBTYPE
 		{
@@ -104,6 +112,8 @@ PART
 			transform = COLLIDERMED04
 			addedMass = -0.0875
 			addedCost = -112.5
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_dual_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_dual_detail
 		}
 		SUBTYPE
 		{
@@ -112,6 +122,8 @@ PART
 			transform = TRUSSMEDFRAME
 			addedMass = -0.175
 			addedCost = -225
+      descriptionSummary = #LOC_NFConstruction_switcher_truss_frame_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_truss_frame_detail
 		}
 	}
 	MODULE
@@ -130,6 +142,8 @@ PART
 			transform = COLLIDERTOPA02
 			transform = COLLIDERTOPA03
 			transform = COLLIDERTOPA04
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -140,6 +154,8 @@ PART
 			transform = COLLIDERTOPB
 			addedMass = 0.03
 			addedCost = 75
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 		SUBTYPE
 		{
@@ -148,6 +164,8 @@ PART
 			transform = TRUSSTOPFRAME
 			addedMass = -0.01
 			addedCost = -25
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_none_detail
 		}
 	}
 	MODULE
@@ -166,6 +184,8 @@ PART
 			transform = COLLIDERBOTA02
 			transform = COLLIDERBOTA03
 			transform = COLLIDERBOTA04
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_basic_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_basic_detail
 		}
 		SUBTYPE
 		{
@@ -176,6 +196,8 @@ PART
 			transform = COLLIDERBOTB
 			addedMass = 0.03
 			addedCost = 75
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_solid_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_solid_detail
 		}
 		SUBTYPE
 		{
@@ -184,6 +206,8 @@ PART
 			transform = TRUSSBOTFRAME
 			addedMass = -0.01
 			addedCost = -25
+      descriptionSummary = #LOC_NFConstruction_switcher_endcap_none_summary
+      descriptionDetail = #LOC_NFConstruction_switcher_endcap_none_detail
 		}
 	}
 }
